// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing historyReducer should do nothing with a junk action 1`] = `
Object {
  "archetype": undefined,
  "bonuses": Array [],
  "chi": Object {
    "corrupt": Object {
      "cultivation": 0,
      "value": 0,
    },
    "earth": Object {
      "cultivation": 0,
      "value": 0,
    },
    "enlightened": Object {
      "cultivation": 0,
      "value": 0,
    },
    "fire": Object {
      "cultivation": 0,
      "value": 0,
    },
    "general": Object {
      "cultivation": 0,
      "value": 0,
    },
    "metal": Object {
      "cultivation": 0,
      "value": 0,
    },
    "water": Object {
      "cultivation": 0,
      "value": 0,
    },
    "wood": Object {
      "cultivation": 0,
      "value": 0,
    },
  },
  "concept": undefined,
  "destiny": 0,
  "discounts": Array [],
  "entanglement": 0,
  "history": Array [
    Object {
      "type": "INITIAL_STATE",
    },
  ],
  "kungfu": Object {
    "KUNGFU_EXTERNAL": Object {},
    "KUNGFU_INTERNAL": Object {},
  },
  "loresheets": Object {},
  "name": undefined,
  "rank": undefined,
  "skills": Object {
    "Awareness": Object {
      "name": "Awareness",
      "specialities": Array [],
      "value": 0,
    },
    "Confidence": Object {
      "name": "Confidence",
      "specialities": Array [],
      "value": 0,
    },
    "Crafting": Object {
      "name": "Crafting",
      "specialities": Array [],
      "value": 0,
    },
    "Finesse": Object {
      "name": "Finesse",
      "specialities": Array [],
      "value": 0,
    },
    "Hardiness": Object {
      "name": "Hardiness",
      "specialities": Array [],
      "value": 0,
    },
    "Inspire": Object {
      "name": "Inspire",
      "specialities": Array [],
      "value": 0,
    },
    "Learning": Object {
      "name": "Learning",
      "specialities": Array [],
      "value": 0,
    },
    "Medicine": Object {
      "name": "Medicine",
      "specialities": Array [],
      "value": 0,
    },
    "Might": Object {
      "name": "Might",
      "specialities": Array [],
      "value": 0,
    },
    "Perform": Object {
      "name": "Perform",
      "specialities": Array [],
      "value": 0,
    },
    "Politics": Object {
      "name": "Politics",
      "specialities": Array [],
      "value": 0,
    },
    "Ride": Object {
      "name": "Ride",
      "specialities": Array [],
      "value": 0,
    },
    "Stealth": Object {
      "name": "Stealth",
      "specialities": Array [],
      "value": 0,
    },
    "Survival": Object {
      "name": "Survival",
      "specialities": Array [],
      "value": 0,
    },
    "Tactics": Object {
      "name": "Tactics",
      "specialities": Array [],
      "value": 0,
    },
    "Wu Wei": Object {
      "name": "Wu Wei",
      "specialities": Array [],
      "value": 0,
    },
  },
  "virtues": Array [
    Object {
      "name": "Honor",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Object {
      "name": "Benevolence",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Object {
      "name": "Righteousness",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Object {
      "name": "Loyalty",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Object {
      "name": "Force",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Object {
      "name": "Revenge",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
    Object {
      "name": "Individualism",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
    Object {
      "name": "Obsession",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
    Object {
      "name": "Ruthlessness",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
    Object {
      "name": "Ferocity",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
  ],
}
`;

exports[`Testing historyReducer should receive an HISTORY_DELETE action 1`] = `
Object {
  "archetype": "warrior",
  "bonuses": Array [],
  "chi": Object {
    "corrupt": Object {
      "cultivation": 0,
      "value": 0,
    },
    "earth": Object {
      "cultivation": 0,
      "value": 0,
    },
    "enlightened": Object {
      "cultivation": 0,
      "value": 0,
    },
    "fire": Object {
      "cultivation": 0,
      "value": 0,
    },
    "general": Object {
      "cultivation": 0,
      "value": 10,
    },
    "metal": Object {
      "cultivation": 0,
      "value": 0,
    },
    "water": Object {
      "cultivation": 0,
      "value": 0,
    },
    "wood": Object {
      "cultivation": 0,
      "value": 0,
    },
  },
  "concept": "Dread pirate Roberts",
  "destiny": 20,
  "discounts": Array [
    Object {
      "skills": Array [
        "Awareness",
        "Confidence",
        "Crafting",
        "Finesse",
        "Hardiness",
        "Inspire",
        "Learning",
        "Medicine",
        "Might",
        "Perform",
        "Politics",
        "Ride",
        "Stealth",
        "Survival",
        "Tactics",
        "Wu Wei",
      ],
      "type": "DISCOUNT_SKILL",
      "value": 20,
    },
  ],
  "entanglement": 0,
  "history": Array [
    Object {
      "type": "INITIAL_STATE",
    },
    Object {
      "name": "Roberts",
      "type": "HEADER_SET_NAME",
    },
    Object {
      "concept": "Dread pirate Roberts",
      "type": "HEADER_SET_CONCEPT",
    },
    Object {
      "archetype": "warrior",
      "type": "HEADER_SET_ARCHETYPE",
    },
    Object {
      "rank": "4th_rank",
      "type": "HEADER_SET_RANK",
    },
  ],
  "kungfu": Object {
    "KUNGFU_EXTERNAL": Object {},
    "KUNGFU_INTERNAL": Object {},
  },
  "loresheets": Object {},
  "name": "Roberts",
  "rank": Object {
    "name": "4th_rank",
    "value": 2,
  },
  "skills": Object {
    "Awareness": Object {
      "name": "Awareness",
      "specialities": Array [],
      "value": 0,
    },
    "Confidence": Object {
      "name": "Confidence",
      "specialities": Array [],
      "value": 0,
    },
    "Crafting": Object {
      "name": "Crafting",
      "specialities": Array [],
      "value": 0,
    },
    "Finesse": Object {
      "name": "Finesse",
      "specialities": Array [],
      "value": 0,
    },
    "Hardiness": Object {
      "name": "Hardiness",
      "specialities": Array [],
      "value": 0,
    },
    "Inspire": Object {
      "name": "Inspire",
      "specialities": Array [],
      "value": 0,
    },
    "Learning": Object {
      "name": "Learning",
      "specialities": Array [],
      "value": 0,
    },
    "Medicine": Object {
      "name": "Medicine",
      "specialities": Array [],
      "value": 0,
    },
    "Might": Object {
      "name": "Might",
      "specialities": Array [],
      "value": 0,
    },
    "Perform": Object {
      "name": "Perform",
      "specialities": Array [],
      "value": 0,
    },
    "Politics": Object {
      "name": "Politics",
      "specialities": Array [],
      "value": 0,
    },
    "Ride": Object {
      "name": "Ride",
      "specialities": Array [],
      "value": 0,
    },
    "Stealth": Object {
      "name": "Stealth",
      "specialities": Array [],
      "value": 0,
    },
    "Survival": Object {
      "name": "Survival",
      "specialities": Array [],
      "value": 0,
    },
    "Tactics": Object {
      "name": "Tactics",
      "specialities": Array [],
      "value": 0,
    },
    "Wu Wei": Object {
      "name": "Wu Wei",
      "specialities": Array [],
      "value": 0,
    },
  },
  "virtues": Array [
    Object {
      "name": "Honor",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Object {
      "name": "Benevolence",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Object {
      "name": "Righteousness",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Object {
      "name": "Loyalty",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Object {
      "name": "Force",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Object {
      "name": "Revenge",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
    Object {
      "name": "Individualism",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
    Object {
      "name": "Obsession",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
    Object {
      "name": "Ruthlessness",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
    Object {
      "name": "Ferocity",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
  ],
}
`;

exports[`Testing historyReducer should receive an HISTORY_DELETE action 2`] = `
Object {
  "archetype": undefined,
  "bonuses": Array [],
  "chi": Object {
    "corrupt": Object {
      "cultivation": 0,
      "value": 0,
    },
    "earth": Object {
      "cultivation": 0,
      "value": 0,
    },
    "enlightened": Object {
      "cultivation": 0,
      "value": 0,
    },
    "fire": Object {
      "cultivation": 0,
      "value": 0,
    },
    "general": Object {
      "cultivation": 0,
      "value": 0,
    },
    "metal": Object {
      "cultivation": 0,
      "value": 0,
    },
    "water": Object {
      "cultivation": 0,
      "value": 0,
    },
    "wood": Object {
      "cultivation": 0,
      "value": 0,
    },
  },
  "concept": undefined,
  "destiny": 0,
  "discounts": Array [],
  "entanglement": 0,
  "history": Array [
    Object {
      "type": "INITIAL_STATE",
    },
    Object {
      "name": "Roberts",
      "type": "HEADER_SET_NAME",
    },
  ],
  "kungfu": Object {
    "KUNGFU_EXTERNAL": Object {},
    "KUNGFU_INTERNAL": Object {},
  },
  "loresheets": Object {},
  "name": "Roberts",
  "rank": undefined,
  "skills": Object {
    "Awareness": Object {
      "name": "Awareness",
      "specialities": Array [],
      "value": 0,
    },
    "Confidence": Object {
      "name": "Confidence",
      "specialities": Array [],
      "value": 0,
    },
    "Crafting": Object {
      "name": "Crafting",
      "specialities": Array [],
      "value": 0,
    },
    "Finesse": Object {
      "name": "Finesse",
      "specialities": Array [],
      "value": 0,
    },
    "Hardiness": Object {
      "name": "Hardiness",
      "specialities": Array [],
      "value": 0,
    },
    "Inspire": Object {
      "name": "Inspire",
      "specialities": Array [],
      "value": 0,
    },
    "Learning": Object {
      "name": "Learning",
      "specialities": Array [],
      "value": 0,
    },
    "Medicine": Object {
      "name": "Medicine",
      "specialities": Array [],
      "value": 0,
    },
    "Might": Object {
      "name": "Might",
      "specialities": Array [],
      "value": 0,
    },
    "Perform": Object {
      "name": "Perform",
      "specialities": Array [],
      "value": 0,
    },
    "Politics": Object {
      "name": "Politics",
      "specialities": Array [],
      "value": 0,
    },
    "Ride": Object {
      "name": "Ride",
      "specialities": Array [],
      "value": 0,
    },
    "Stealth": Object {
      "name": "Stealth",
      "specialities": Array [],
      "value": 0,
    },
    "Survival": Object {
      "name": "Survival",
      "specialities": Array [],
      "value": 0,
    },
    "Tactics": Object {
      "name": "Tactics",
      "specialities": Array [],
      "value": 0,
    },
    "Wu Wei": Object {
      "name": "Wu Wei",
      "specialities": Array [],
      "value": 0,
    },
  },
  "virtues": Array [
    Object {
      "name": "Honor",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Object {
      "name": "Benevolence",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Object {
      "name": "Righteousness",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Object {
      "name": "Loyalty",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Object {
      "name": "Force",
      "type": "VIRTUE_CHIVALROUS",
      "value": 0,
    },
    Object {
      "name": "Revenge",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
    Object {
      "name": "Individualism",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
    Object {
      "name": "Obsession",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
    Object {
      "name": "Ruthlessness",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
    Object {
      "name": "Ferocity",
      "type": "VIRTUE_SELFISH",
      "value": 0,
    },
  ],
}
`;
